--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,11 @@ h2,
 h3,
 h4,
 h5,
-h6, .heading {
+h6 {
+  font-family: var(--font-ubuntu);
+}
+
+.heading, .heading > * {
   font-family: var(--font-ubuntu);
 }
 
@@ -28,7 +32,6 @@ h6, .heading {
 .parallax .scroller {
   font-weight: 500;
   text-transform: uppercase;
-  font-size: 64px;
   display: flex;
   white-space: nowrap;
   flex-wrap: nowrap;
@@ -36,7 +39,6 @@ h6, .heading {
 
 .parallax span {
   display: block;
-  margin-right: 18px;
 }
 
 .parallax span::after {
