break: migrate to next15 and react19.1 and pnpm. Replace static content with Sanity data
bump related dependencies

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,8 @@ h6 {
   font-family: var(--font-ubuntu);
 }
 
-.heading, .heading > * {
+.heading,
+.heading > * {
   font-family: var(--font-ubuntu);
 }
 
